Add search function

--- a/src/scss/abstracts/_index.scss
+++ b/src/scss/abstracts/_index.scss
@@ -3,3 +3,5 @@
 @forward "../abstracts/container";
 @forward "../abstracts/spacing";
 @forward "../abstracts/breakpoints";
+@forward "../abstracts/mixins";
+@forward "../abstracts/animations";
