--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -24,19 +24,27 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    // filter: brightness(0.3);
+    filter: brightness(0.75);
     user-select: none;
+
+    &:first-of-type {
+      opacity: 0;
+      animation: fade-in 300ms ease-in forwards;
+    }
   }
 
   &__item-info {
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     gap: $spacing-2;
     width: 50%;
     height: auto;
+    // padding: $spacing-4 $spacing-4 $spacing-4 calc($spacing-6 * 2);
+    padding: $spacing-4 $spacing-4 $spacing-4 clamp(1rem, -5rem + 10vw, 3rem);
     padding: $spacing-4;
     user-select: none;
 
@@ -74,7 +82,7 @@
     gap: $spacing-2;
 
     & span {
-      font-size: map-get($font-size, 4);
+      font-size: map-get($font-size, 6);
       padding: $spacing-1 $spacing-2;
       border-radius: $spacing-1;
       background-color: hsl(0, 0%, 100%, 0.3);
@@ -84,6 +92,22 @@
 
   &__item-overview {
     line-height: 1.25;
+  }
+
+  &__item-trailer {
+    display: flex;
+    align-items: center;
+    gap: $spacing-1;
+    width: fit-content;
+    padding: $spacing-2;
+    background-color: red;
+    border-radius: $spacing-2;
+    transition: 250ms ease;
+
+    &:hover {
+      color: red;
+      background-color: black;
+    }
   }
 
   &__slider {
@@ -306,14 +330,65 @@
       }
     }
   }
+
+  &__trailer-modal {
+    @include modal-open(300ms);
+    width: 100%;
+    height: 100%;
+    max-width: none;
+    max-height: none;
+    border: none;
+    background-color: transparent;
+    user-select: none;
+
+    &:open {
+      display: grid;
+      place-items: center;
+    }
+
+    &::backdrop {
+      @include fade-in(300ms);
+      backdrop-filter: blur(15px);
+    }
+
+    &--close {
+      @include modal-close(300ms);
+    }
+
+    &--close::backdrop {
+      @include fade-out(300ms);
+    }
+
+    .btn--close-modal {
+      position: absolute;
+      top: $spacing-6;
+      right: $spacing-6;
+    }
+  }
+
+  &__trailer-modal-video {
+    width: min(50rem, 100%);
+    height: auto;
+    aspect-ratio: 16 / 9;
+    border-radius: $spacing-2;
+    box-shadow: 0 0 10px 2px black;
+    overflow: hidden;
+  }
+
+  /* @keyframes modal-open {
+    0% {
+      opacity: 0;
+      transform: translateY(1rem);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  } */
 }
 
-@keyframes fade-in {
+/* @keyframes fade-in {
   100% {
     opacity: 1;
   }
-}
-
-* {
-  outline: 1px solid lime;
-}
+} */
