--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,14 +6,13 @@
   align-items: center;
   gap: $spacing-3;
   width: $container;
-  margin-inline: calc((100% - $container) / 2);
+  margin-inline: auto;
   padding: $spacing-2;
-  background-color: red;
 
   &--home {
     position: absolute;
     top: 1rem;
-    z-index: 999;
+    z-index: 9999;
     background-color: transparent;
   }
 
@@ -30,23 +29,34 @@
     }
   }
 
+  .btn--menu {
+    z-index: 999999;
+  }
+
   &__nav-list {
     display: flex;
     gap: $spacing-2;
 
     @media (max-width: map-get($breakpoint, medium)) {
-      height: 100%;
-      gap: 0;
-      flex-direction: column;
       position: fixed;
       top: 0;
-      left: -100%;
-      // transform: translateX(-100%);
-      transition: 250ms ease-in-out;
+      left: 0;
+      z-index: 1000;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 0;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(15px);
+      transition: 300ms cubic-bezier(0.29, 0, 1, 0.5);
+      transition: 300ms ease-in-out;
+
+      scale: 0;
 
       &--show {
         // transform: translateX(0);
-        left: 0;
+        scale: 1;
       }
     }
   }
@@ -67,6 +77,10 @@
     // TODO
     &:hover {
       opacity: 0.5;
+    }
+
+    & * {
+      user-select: none;
     }
   }
 
