--- a/src/css/main.css
+++ b/src/css/main.css
@@ -103,7 +103,7 @@ section {
 }
 
 body {
-  line-height: 1;
+  line-height: 1.5;
 }
 
 ol,
@@ -209,12 +209,74 @@ a {
   color: inherit;
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade-in-slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fade-out-slide-down {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+}
 html {
   scroll-behavior: smooth;
 }
 
 body {
   overscroll-behavior: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+body:has(dialog:open) {
+  overflow: inherit;
+}
+body.lock-scrollbar {
+  overflow-y: scroll;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+.btn:hover {
+  opacity: 0.8;
+}
+
+.modal-close {
+  opacity: 0;
+  transition: 300ms ease-out;
 }
 
 .header {
@@ -223,14 +285,13 @@ body {
   align-items: center;
   gap: 0.75rem;
   width: min(80rem, 100%);
-  margin-inline: calc((100% - min(80rem, 100%)) / 2);
+  margin-inline: auto;
   padding: 0.5rem;
-  background-color: red;
 }
 .header--home {
   position: absolute;
   top: 1rem;
-  z-index: 999;
+  z-index: 9999;
   background-color: transparent;
 }
 .header__logo {
@@ -242,22 +303,32 @@ body {
     display: none;
   }
 }
+.header .btn--menu {
+  z-index: 999999;
+}
 .header__nav-list {
   display: flex;
   gap: 0.5rem;
 }
 @media (max-width: 48rem) {
   .header__nav-list {
-    height: 100%;
-    gap: 0;
-    flex-direction: column;
     position: fixed;
     top: 0;
-    left: -100%;
-    transition: 250ms ease-in-out;
+    left: 0;
+    z-index: 1000;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(15px);
+    transition: 300ms cubic-bezier(0.29, 0, 1, 0.5);
+    transition: 300ms ease-in-out;
+    scale: 0;
   }
   .header__nav-list--show {
-    left: 0;
+    scale: 1;
   }
 }
 .header__nav-item {
@@ -274,6 +345,9 @@ body {
 .header__nav-link:hover {
   opacity: 0.5;
 }
+.header__nav-link * {
+  user-select: none;
+}
 .header__nav-sub-list {
   opacity: 0;
   visibility: hidden;
@@ -288,19 +362,20 @@ body {
 }
 
 .searchbar {
-  position: absolute;
-  top: 5rem;
-  z-index: 999;
   display: flex;
   justify-content: center;
-  width: min(80rem, 100%);
-  margin-inline: calc((100vw - min(80rem, 100%)) / 2);
+  width: calc(100% - 1rem);
+  height: auto;
+  position: absolute;
+  top: 6rem;
+  left: 0.5rem;
+  z-index: 9999;
 }
 .searchbar__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 100%;
   height: 3rem;
   border: 1px solid #fff;
   border-radius: 1rem;
@@ -329,6 +404,51 @@ body {
 }
 .searchbar__search-input:not(:placeholder-shown) + .btn--clear {
   display: block;
+}
+.searchbar__result-list {
+  width: 100%;
+  position: absolute;
+  top: calc(100% + 1rem);
+  z-index: 99999;
+  background: hsla(0, 0%, 0%, 0.75);
+  backdrop-filter: blur(15px);
+  border-radius: 0.5rem;
+}
+.searchbar__result-list-link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+  padding: 0.25rem 0.5rem;
+}
+.searchbar__result-list-link:hover {
+  opacity: 0.8;
+}
+.searchbar__result-list-img {
+  width: 5rem;
+  aspect-ratio: 3/4;
+}
+.searchbar__result-list-info {
+  align-self: start;
+}
+.searchbar__result-list-title {
+  font-size: 1.25rem;
+}
+.searchbar__result-list-genres {
+  font-size: 0.875rem;
+}
+@media (min-width: 48rem) {
+  .searchbar {
+    width: 40rem;
+    left: calc((100vw - 40rem) / 2);
+  }
+}
+@media (prefers-reduced-motion: reduce) {
+  .searchbar * {
+    animation-duration: 0.001ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.001ms !important;
+  }
 }
 
 @keyframes slide-up {
@@ -424,6 +544,16 @@ body {
       outline: 2px solid lime;
     }
   } */
+  /* @keyframes modal-open {
+    0% {
+      opacity: 0;
+      transform: translateY(1rem);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  } */
 }
 .carousel__item {
   position: absolute;
@@ -441,17 +571,24 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: brightness(0.75);
   user-select: none;
+}
+.carousel__item-img:first-of-type {
+  opacity: 0;
+  animation: fade-in 300ms ease-in forwards;
 }
 .carousel__item-info {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   width: 50%;
   height: auto;
+  padding: 1rem 1rem 1rem clamp(1rem, -5rem + 10vw, 3rem);
   padding: 1rem;
   user-select: none;
   /* background-color: hsl(0, 0%, 0%, 0.3);
@@ -471,13 +608,13 @@ body {
   }
 }
 .carousel__item-title {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: 700;
 }
 .carousel__item-details {
   display: flex;
   gap: 0.5rem;
-  font-size: 0.875rem;
+  font-size: 1.25rem;
 }
 .carousel__item-genres {
   display: flex;
@@ -493,6 +630,20 @@ body {
 }
 .carousel__item-overview {
   line-height: 1.25;
+}
+.carousel__item-trailer {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  width: fit-content;
+  padding: 0.5rem;
+  background-color: red;
+  border-radius: 0.5rem;
+  transition: 250ms ease;
+}
+.carousel__item-trailer:hover {
+  color: red;
+  background-color: black;
 }
 .carousel__slider {
   position: absolute;
@@ -605,22 +756,53 @@ body {
     transform: scale(1.1);
   }
 }
+.carousel__trailer-modal {
+  animation: fade-in-slide-up 300ms ease-in-out normal forwards;
+  width: 100%;
+  height: 100%;
+  max-width: none;
+  max-height: none;
+  border: none;
+  background-color: transparent;
+  user-select: none;
+}
+.carousel__trailer-modal:open {
+  display: grid;
+  place-items: center;
+}
+.carousel__trailer-modal::backdrop {
+  animation: fade-in 300ms ease-in-out 0s forwards;
+  backdrop-filter: blur(15px);
+}
+.carousel__trailer-modal--close {
+  animation: fade-out-slide-down 300ms ease-in-out forwards;
+}
+.carousel__trailer-modal--close::backdrop {
+  animation: fade-out 300ms ease-in-out 0s forwards;
+}
+.carousel__trailer-modal .btn--close-modal {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+}
+.carousel__trailer-modal-video {
+  width: min(50rem, 100%);
+  height: auto;
+  aspect-ratio: 16/9;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px 2px black;
+  overflow: hidden;
+}
 
-@keyframes fade-in {
+/* @keyframes fade-in {
   100% {
     opacity: 1;
   }
-}
-* {
-  outline: 1px solid lime;
-}
-
+} */
 .slider {
   --card-width: 10rem;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 @media (min-width: 48rem) {
   .slider {
@@ -631,6 +813,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  padding: 0.75rem;
 }
 .slider__heading {
   display: flex;
@@ -668,14 +851,19 @@ body {
 .slider__inner {
   display: flex;
   gap: 0.75rem;
+  padding-left: 0.75rem;
   transition: 250ms linear;
-  overflow-x: auto;
   --webkit-scrollbar-width: none;
   scrollbar-width: none;
   scroll-snap-type: inline mandatory;
   scroll-behavior: smooth;
   scroll-padding: 0.75rem;
   overscroll-behavior-inline: contain;
+  pointer-events: none;
+  overflow: hidden;
+}
+.slider__inner * {
+  pointer-events: auto;
 }
 .slider__link {
   flex: 0 0 var(--card-width);
@@ -705,32 +893,32 @@ body {
   transition: 250ms ease-in-out;
 }
 .slider__card-info {
+  color: hsla(0, 0%, 0%, 0.8);
+  backdrop-filter: blur(15px);
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   width: calc(var(--card-width) * 1.5);
   height: 100%;
   position: absolute;
-  top: -1px;
+  top: 0;
   left: 0;
   transform: translateX(var(--card-width));
   opacity: 0;
-  background-color: hsla(0, 0%, 0%, 0.8);
-  backdrop-filter: blur(15px);
   flex-grow: 1;
   padding: 1rem;
   border-radius: 0 0.25rem 0.25rem 0;
   transition: opacity 250ms ease-in;
 }
 .slider__card-title {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: 500;
   margin-bottom: 0.25rem;
 }
 .slider__card-details {
   display: flex;
   gap: 0.5rem;
-  font-size: 0.875rem;
+  font-size: 1.25rem;
 }
 .slider__card-genres {
   display: flex;
@@ -738,7 +926,7 @@ body {
   gap: 0.5rem;
 }
 .slider__card-genres span {
-  font-size: 0.875rem;
+  font-size: 1.25rem;
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
   background-color: rgba(255, 255, 255, 0.1);
@@ -761,13 +949,13 @@ body {
   border: none;
   z-index: 10;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 .slider__btn--prev {
   left: 0;
 }
 .slider__btn--next {
-  right: -1px;
+  right: 0;
 }
 @media (min-width: 60rem) {
   .slider__btn:hover {
@@ -792,98 +980,161 @@ body {
   filter: brightness(0.8);
 }
 
-.content {
-  background: lime;
-}
 .content__banner {
   width: 100%;
-  height: 30rem;
+  height: 25vh;
   object-fit: cover;
-  object-position: top;
+  object-position: center;
 }
-.content__container {
+.content__main-content {
   display: grid;
-  grid-template-columns: 15rem 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr;
   gap: 1.5rem;
   width: min(80rem, 100%);
-  margin-inline: calc((100% - min(80rem, 100%)) / 2);
-  margin-top: -10rem;
+  margin-inline: auto;
   padding: 1rem;
+  line-height: 1.5;
 }
 .content__aside {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: white;
   border-radius: 0.5rem;
   color: black;
-  grid-column: 1;
-  grid-row: 1/span 2;
+  height: fit-content;
 }
 .content__poster {
   width: 100%;
   aspect-ratio: 2/3;
   object-fit: cover;
   background: red;
+  border-radius: 0.5rem;
 }
-.content__title {
+.content__aside-heading {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.content__header {
+  grid-row: 2;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: white;
   border-radius: 0.5rem;
   color: black;
-  grid-column: 2;
-  grid-row: 1;
+}
+.content__header-title {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+.content__header-title-left {
+  display: flex;
+  flex-direction: column;
+}
+.content__title {
+  font-size: 2rem;
+  font-weight: 700;
+}
+.content__year {
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.content__genres {
+  background: lime;
+  font-size: 2rem;
+  color: red;
+}
+.content__rating {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+.content__header-footer {
+  border-top: 1px solid black;
+  padding-block: 1rem;
+}
+.content__budget {
+  padding: 0.5rem;
+  margin-left: 0.25rem;
+  background-color: gray;
+  border-radius: 0.5rem;
 }
 .content__details {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: white;
   border-radius: 0.5rem;
   color: black;
-  grid-column: 2;
-  grid-row: 2;
+}
+.content__tabs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  border-bottom: 1px solid black;
+  padding-bottom: 0.5rem;
+}
+.content__tab--active {
+  color: red;
+}
+.content__overview {
+  max-width: 100%;
 }
 .content__cast-img {
   width: 6rem;
   height: 9rem;
   object-fit: cover;
 }
+@media (min-width: 30rem) and (max-width: calc(48rem - 1px)) {
+  .content__aside {
+    flex-direction: row;
+  }
+  .content__poster {
+    width: 15rem;
+  }
+}
+@media (min-width: 48rem) {
+  .content__banner {
+    height: 25rem;
+  }
+  .content__main-content {
+    grid-template-columns: 18rem 1fr;
+    grid-template-rows: auto 1fr;
+    margin-top: -12.5rem;
+  }
+  .content__aside {
+    grid-column: 1;
+    grid-row: 1/span 2;
+  }
+  .content__header {
+    grid-column: 2;
+    grid-row: 1;
+    grid-template-columns: 1fr auto;
+  }
+  .content__header-title {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .content__details {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .content__poster {
+    width: 100%;
+  }
+}
 
 .content-section {
   display: flex;
-  max-width: 100vw;
-}
-.content-section__label-container {
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-  padding: 1rem;
-  font-size: 2rem;
-  position: relative;
-}
-.content-section__label {
-  position: sticky;
-  top: 1.5rem;
-  user-select: none;
-}
-.content-section__tabs-list {
-  display: flex;
-}
-.content-section__tabs-item {
-  padding: 1rem;
-}
-.content-section__sliders-container {
-  display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
-  padding: 1rem;
 }
 
 .btn--to-top {
@@ -892,6 +1143,17 @@ body {
   right: 3rem;
   z-index: 10;
   padding: 1rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  width: min(80rem, 100%);
+  padding: 0.75rem;
+  margin-top: 1rem;
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
