--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -6,4 +6,34 @@ html {
 
 body {
   overscroll-behavior: none;
+  font-family: $font-family;
+
+  &:has(dialog:open) {
+    overflow: inherit;
+  }
+
+  &.lock-scrollbar {
+    overflow-y: scroll;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+.modal-close {
+  opacity: 0;
+  transition: 300ms ease-out;
 }
