--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -10,6 +10,11 @@
   left: $spacing-2;
   z-index: 9999;
 
+  @media (min-width: map-get($breakpoint, medium)) {
+    width: 40rem;
+    left: calc((100vw - 40rem) / 2);
+  }
+
   &__container {
     display: flex;
     justify-content: center;
@@ -17,11 +22,12 @@
     // width: 50%;
     width: 100%;
     height: 3rem;
+    backdrop-filter: blur(15px);
+    background: hsla(0, 0%, 0%, 75%);
     border: 1px solid #fff;
     border-radius: $spacing-4;
     overflow: hidden;
-    animation: slide-up 300ms linear;
-    background: hsla(0, 0%, 0%, 75%);
+    animation: slide-up 500ms cubic-bezier(0.79, 0.33, 0.14, 0.53);
   }
 
   .form-control {
@@ -60,12 +66,18 @@
 
   &__result-list {
     width: 100%;
+    max-height: 70dvh;
     position: absolute;
     top: calc(100% + $spacing-4);
     z-index: 99999;
+    overflow: auto;
     background: hsla(0, 0%, 0%, 75%);
     backdrop-filter: blur(15px);
     border-radius: $spacing-2;
+  }
+
+  &__result-list-item {
+    max-width: 100%;
   }
 
   &__result-list-link {
@@ -86,7 +98,10 @@
   }
 
   &__result-list-info {
+    display: flex;
+    flex-direction: column;
     align-self: start;
+    width: 100%;
   }
 
   &__result-list-title {
@@ -95,11 +110,6 @@
 
   &__result-list-genres {
     font-size: map-get($font-size, 6);
-  }
-
-  @media (min-width: map-get($breakpoint, medium)) {
-    width: 40rem;
-    left: calc((100vw - 40rem) / 2);
   }
 
   @media (prefers-reduced-motion: reduce) {
@@ -112,10 +122,10 @@
 }
 
 @keyframes slide-up {
-  from {
+  0% {
     width: 0;
   }
-  to {
-    width: 50%;
+  100% {
+    width: 100%;
   }
 }
