--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -4,9 +4,15 @@
   display: flex;
   flex-direction: column;
   gap: $spacing-4;
-  // width: $container;
-  // margin-inline: auto;
-  // width: 100%;
+
+  &__heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: $spacing-2;
+    margin-top: $spacing-6;
+    font-size: map-get($font-size, 1);
+  }
 }
 
 .btn--to-top {
