--- a/src/css/main.css
+++ b/src/css/main.css
@@ -507,7 +507,7 @@ body.lock-scrollbar {
 }
 .carousel {
   width: 100%;
-  height: 100dvh;
+  height: 100svh;
   position: relative;
   overflow: hidden;
 }
@@ -516,7 +516,7 @@ body.lock-scrollbar {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 100svh;
   position: absolute;
   top: 0;
   left: 0;
