--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -2,7 +2,7 @@
 
 .carousel {
   width: 100%;
-  height: 100dvh;
+  height: 100svh;
   position: relative;
   overflow: hidden;
 
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 100svh;
     position: absolute;
     top: 0;
     left: 0;
